# openproject-nexgen-rs

./: .gitignore  Cargo.toml  Dockerfile  NEXGEN_SEED.md  SPRINT_CODEGEN.md  coverage-report.md  extraction-gap-proposals.md  railway.toml  rust-toolchain.toml
.claude/: VENDOR-STATE.md  settings.json
.claude/board/: EPIPHANIES.md
.claude/designs/: 2026-07-08-ui-as-classview-shape-types.md
.claude/findings/: 2026-07-08-erb-vs-odoo-klickweg-synergy-drift.md  2026-07-08-pure-classview-per-app-not-shared.md
.claude/handovers/: 2026-06-30-0715-odoo-recipe-bitmask-to-openproject-rails.md  2026-06-30-1200-op-redmine-ogar-convergence-assessment.md  2026-07-02-classid-canon-high-flip.md  2026-07-02-ruff-upstream-extraction-contract.md  2026-07-02-wishlist-cross-session.md  2026-07-05-CAPSTONE-ar-shape-convergence.md  2026-07-05-ogar-v3-consumer-migration-plan.md  2026-07-05-op-rs-redmine-rs-convergence-handover.md  2026-07-05-redmine-op-ar-shape-convergence-plan.md  2026-07-06-op-rs-v3-transpile-goal-handover.md  2026-07-08-klickweg-viewfilter-arc-handover.md
.claude/harvest/: 2026-07-06-transpile-ledger.md  README.md  c4-rename-seed.ndjson  orm-ar-backprojection.toml
.claude/harvest/op-representer-bake/: README.md  conv1.json  field_order.ndjson  masks.ndjson
.claude/harvest/redmine-view-bake/: README.md  field_order.ndjson  masks.ndjson
.claude/hooks/: block-grep-sed-head-tail.sh
.claude/knowledge/: RAILS-COVERAGE-KIT.md  RESIDUAL-THREE-BUCKETS.md  TWO-SHAPES-COMPILED-NOT-PARSED.md  c17-evaluation.md  c17-scanner-coverage-probes.md  menu-quad-rail-port.md  six-region-layout-port.md
.claude/plans/: 2026-07-06-op-rs-v3-transpile-v1.md  2026-07-06-redmine-op-render-bake-v1.md
.claude/reviews/: 2026-07-07-council-5plus3-pr79.md
.claude/ruff-expansions/: 2026-07-06-w3-migration-replay.md  2026-07-06-w3-migration-replay.patch  2026-07-10-routes-arm-spec.md  2026-07-11-guard-edge-permission-spec.md  2026-07-11-identity-binding-spec.md  2026-07-11-menu-quad-ogar-facet-wiring-spec.md  2026-07-11-quad-harvest-engine-spec.md  2026-07-11-region-arm-spec.md  2026-07-11-region-fact-collapse-spec.md
.claude/ruff-expansions/smoothness/: 0001-ogar-render-askama-keep-foo-foo-foo-sanitized-idents.patch  0001-ruff_ruby_spo-post-baseline-migration-replay-W3-migr.patch  0002-ogar-from-ruff-last-def-wins-dedup-for-same-named-Ac.patch  0002-ruff_ruby_spo-qualify-nested-classes-by-enclosing-cl.patch  0003-ogar-from-ruff-Rails-convention-association-target-d.patch  0003-ruff_ruby_spo-strip-trailing-comments-before-parsing.patch  README.md
.claude/skills/: sprint-C0-SKILL.md
.claude/sprints/c10-projection-widen-validates/: STATE
.claude/sprints/c11-rails-fixture-pipeline/: STATE
.claude/sprints/c12-projection-type-inference/: STATE
.claude/sprints/c13-projection-fk-record-link/: STATE
.claude/sprints/c14-emit-define-index/: STATE
.claude/tools/: vendor-sync.sh
.claude/tools/rails-coverage-harness/: Cargo.toml
.claude/tools/rails-coverage-harness/src/: main.rs
calibration/: news.md
calibration/census/: api-resources.md
calibration/notes/: gap-research.md
calibration/sprint-c1-gap1-ruff/: STATUS.md  sprint-c1-gap1.patch
crates/op-canon/: Cargo.toml
crates/op-canon/data/: op.ogar.json
crates/op-canon/src/: app.rs  class_ids.rs  class_view.rs  lib.rs
crates/op-cli/: Cargo.toml  build.rs
crates/op-codegen-bucket/: Cargo.toml
crates/op-codegen-bucket/src/: lib.rs
crates/op-codegen-pipeline/: Cargo.toml
crates/op-codegen-pipeline/src/: field_harvest.rs  lib.rs  nav_harvest.rs  ogar_consumer.rs
crates/op-codegen-pipeline/tests/: field_harvest_probe.rs  harvest_denominator_probe.rs  nav_harvest_probe.rs  ogar_consumer_fixture.rs  rails_fixture.rs  render_bake_leg2_probe.rs  render_bake_probe.rs
crates/op-codegen-pipeline/tests/fixtures/rails_mini/app/models/: adhoc_thing.rb  time_entry.rb  work_package.rb
crates/op-codegen-pipeline/tests/fixtures/rails_mini/db/: schema.rb
crates/op-codegen-pipeline/tests/fixtures/rails_mini/db/migrate/tables/: time_entries.rb  work_packages.rb
crates/op-codegen-pipeline/tests/fixtures/rails_nav/app/controllers/: work_packages_controller.rb
crates/op-codegen-pipeline/tests/fixtures/rails_nav/app/views/projects/: show.html.erb
crates/op-codegen-pipeline/tests/fixtures/rails_nav/app/views/work_packages/: index.html.erb
crates/op-codegen-pipeline/tests/fixtures/rails_nav/lib/redmine/: default_menu.rb
crates/op-codegen-pipeline/tests/fixtures/rails_views/app/views/work_packages/: index.html.erb
crates/op-codegen-projection/: Cargo.toml
crates/op-codegen-projection/src/: class_schema.rs  class_view.rs  lib.rs
crates/op-codegen-residual/: Cargo.toml
crates/op-codegen-residual/src/: lib.rs
crates/op-generated/: Cargo.toml
crates/op-generated/src/: lib.rs
crates/op-models/: Cargo.toml
crates/op-models/src/: lib.rs  news.rs
crates/op-models/src/project/: model.rs
crates/op-server/: Cargo.toml
crates/op-server/src/: board.rs  layout.rs  main.rs  nav.rs  viewfilter.rs
crates/op-surreal-ast/: Cargo.toml
crates/op-surreal-ast/src/: from_class.rs  from_triples.rs  lib.rs
crates/op-surreal-ast/tests/: exit_codes.rs  op_schema_explore.rs
crates/op-work-packages/: Cargo.toml
crates/op-work-packages/src/: lib.rs  work_package.rs  work_package_service.rs
crates/ruff_openproject/: Cargo.toml
crates/ruff_openproject/src/: lib.rs
crates/ruff_openproject/tests/: body_triage_probe.rs  extract_test.rs
crates/ruff_openproject/tests/fixtures/openproject/app/models/: time_entry.rb
crates/ruff_openproject/tests/fixtures/openproject/db/: schema.rb
crates/ruff_openproject/tests/fixtures/openproject/db/migrate/tables/: time_entries.rb  work_packages.rb
crates/ruff_python_dto_check/: README.md
docs/: DEPLOY-RAILWAY.md  DEPLOYMENT.md  SPRINT_C0_REPORT.md  SPRINT_C1_REPORT.md  SPRINT_C2_REPORT.md  SPRINT_C3_REPORT.md  SPRINT_C4_REPORT.md  SPRINT_C5_REPORT.md  SPRINT_C6_REPORT.md  SUBSTRATE-ENDGAME-NEXGEN-VIEW.md
scripts/: nav-crawl.sh  reality-check.sh
target-spec/: rust-axum-sqlx.toml
(+48 files in other folders)
