[package]
name = "op-codegen-bucket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenProject codegen bucket — HandlerKind enum + RouteBucketTyped<Kind = OpHandlerKind> bridge. First concrete consumer of lance-graph-contract::codegen_spine's C6 sibling trait (RouteBucketTyped<Kind>) + the PR #8 P2 ?Sized blanket fix. Demonstrates that non-Odoo codegen targets plug into the spine additively, without forcing OP kinds into OdooMethodKind."

[lib]
name = "op_codegen_bucket"

[dependencies]
# Upstream `lance-graph-contract` — a trait-only, zero-dep leaf crate.
# Plain git dep (Cargo fetches it); NOT vendored, no local checkout needed.
lance-graph-contract = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }
