[package]
name = "op-codegen-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenProject end-to-end codegen pipeline: Rails IR → ruff SPO triples → lance-graph spine triples → OpSurrealProjection → SurrealQL DDL text. The third concrete consumer of C6 — wires the C5 extraction crates to the C8 projection crate with a single bridge function. Zero new vocabulary; existing types compose."

[lib]
name = "op_codegen_pipeline"

[dependencies]
ruff_openproject       = { path = "../ruff_openproject" }
# Operator ruling: rev pins on AdaWorldAPI-internal git deps are retired —
# they were "out of desperation to lock what hadn't converged in transpiler
# sink-in yet." Drift protection is the fuse tests, not pins. Floats on the
# convergence branch `claude/odoo-rs-transcode-lf8ya5`. Flips to
# `branch = "main"` once the convergence branches merge. Cargo.lock still
# locks a concrete rev for reproducibility.
ruff_spo_triplet       = { git = "https://github.com/AdaWorldAPI/ruff", branch = "claude/odoo-rs-transcode-lf8ya5" }
ruff_ruby_spo          = { git = "https://github.com/AdaWorldAPI/ruff", branch = "claude/odoo-rs-transcode-lf8ya5" }
op-codegen-projection  = { path = "../op-codegen-projection" }
op-surreal-ast         = { path = "../op-surreal-ast" }
lance-graph-contract   = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }
