[package]
name = "op-codegen-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenProject end-to-end codegen pipeline: Rails IR → ruff SPO triples → lance-graph spine triples → OpSurrealProjection → SurrealQL DDL text. The third concrete consumer of C6 — wires the C5 extraction crates to the C8 projection crate with a single bridge function. Zero new vocabulary; existing types compose."

[lib]
name = "op_codegen_pipeline"

# `emit_generated` — WAVE 1 of the OP → op-rs V3 transpile: the checked-in
# generator binary that harvests via ruff + OGAR and writes committed Rust
# into `crates/op-generated/src/generated/` (see that crate's doc comment
# for the do-not-hand-edit contract). Gated behind `ogar-emit` — same
# feature as `ogar_consumer` — so the default build of this crate never
# needs it, matching the native path's untouched-dependency-graph goal.
[[bin]]
name = "emit_generated"
path = "src/bin/emit_generated.rs"
required-features = ["ogar-emit"]

[features]
default = []
# The §5 steps 4-5 consumer path: source -> ruff -> OGAR lift/mint ->
# adapter emit, alongside (not replacing) the native
# ruff -> op-surreal-ast -> SurrealQL path above. Off by default so the
# native path's dependency graph is untouched for consumers that don't
# opt in.
ogar-emit = ["dep:ogar-vocab", "dep:ogar-from-ruff", "dep:ogar-adapter-surrealql", "dep:ogar-render-askama"]

[dependencies]
ruff_openproject       = { path = "../ruff_openproject" }
# Operator ruling: rev pins on AdaWorldAPI-internal git deps are retired —
# they were "out of desperation to lock what hadn't converged in transpiler
# sink-in yet." Drift protection is the fuse tests, not pins. Floats on
# `main` — flipped 2026-07-06 (ruff #44 landed the schema stratum +
# ruff_sqlalchemy_spo on main; convergence branch retired). Cargo.lock
# still locks a concrete rev for reproducibility.
ruff_spo_triplet       = { git = "https://github.com/AdaWorldAPI/ruff", branch = "main" }
ruff_ruby_spo          = { git = "https://github.com/AdaWorldAPI/ruff", branch = "main" }
op-codegen-projection  = { path = "../op-codegen-projection" }
op-surreal-ast         = { path = "../op-surreal-ast" }
lance-graph-contract   = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }
# Optional ogar-emit consumer path (§5 steps 4-5): source -> ruff ->
# OGAR lift/mint -> adapter emit. All on `main` for single-source
# coherence with the rest of the workspace's OGAR deps
# (see op-canon / op-codegen-projection / op-surreal-ast).
ogar-vocab             = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main", optional = true }
ogar-from-ruff         = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main", optional = true }
# Default features only (`surrealdb-parser` stays OFF) — we only need the
# emit(Class) -> SurrealQL DDL direction, not the AST-parser unmap side,
# which pulls in the surrealdb-ast/-parser forks.
ogar-adapter-surrealql = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main", optional = true }
# The V3 render leg (Class × FieldMask × &[ActionDef] → Rust source) — the
# non-deprecated emit path the transpile targets. Optional; only the
# ogar-emit consumer path pulls it. (Pre-W0 blocker fix, 2026-07-06.)
ogar-render-askama     = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main", optional = true }

[dev-dependencies]
# Render-bake probe (tests/render_bake_probe.rs): harvests Rails views into
# ClassView x FieldMask rows and re-emits them dual-target. Dev-only — the
# library never depends on the render kit. All on `main` per the
# everything-on-main ruling.
ogar-vocab           = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
ogar-from-ruff       = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
ogar-render-askama   = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
lance-graph-contract = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }
