[package]
name = "op-codegen-projection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenProject SurrealQL schema projection — impls TripletProjection from lance-graph-contract::codegen_spine for an OP-shaped DDL IR (DEFINE TABLE / DEFINE FIELD). The IR is the DDL facet from the three-facet model (SPO / DDL / Executable); a separate `surreal_text` emitter renders it to SurrealQL. Second concrete consumer of C6 (after op-codegen-bucket)."

[lib]
name = "op_codegen_projection"

[dependencies]
lance-graph-contract = { path = "../../vendor/AdaWorldAPI-lance-graph/crates/lance-graph-contract" }
op-surreal-ast       = { path = "../op-surreal-ast" }
# Canonical class layer + askama rendering kit. Northstar plan §3 C1:
# op-codegen-projection adopts the OGAR render-askama kit as a sibling
# render path next to the existing triples → AST → SurrealQL pipeline.
# The kit's `ArtifactKind::SurrealqlTable` emitter consumes a typed
# `ogar_vocab::Class` directly and produces DDL via the canonical
# template — same shape redmine-canon + every other port renders
# through.
ogar-vocab          = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
ogar-render-askama  = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
# Direct askama dep — `class_schema::render_class_schema` exposes
# `askama::Error` in its public signature (codex P1 on PR #53).
# Transitive deps via `ogar-render-askama` aren't available as extern
# crates in this crate's build graph, so the type must be reachable
# directly. Same version `ogar-render-askama` pins.
askama              = "0.12"
