[package]
name = "op-server"
version.workspace = true
edition.workspace = true
description = "HTTP server binary for OpenProject RS"

[[bin]]
name = "openproject-server"
path = "src/main.rs"

[dependencies]
op-core = { path = "../op-core" }
op-api = { path = "../op-api" }
op-db = { path = "../op-db" }
op-auth = { path = "../op-auth" }

# OGAR render-bake pipeline: ClassView x FieldMask -> HtmlListView.
ogar-render-askama = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
ogar-vocab = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
lance-graph-contract = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }

axum.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower.workspace = true
tower-http = { workspace = true, features = ["compression-gzip", "cors", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
