[package]
name = "op-surreal-ast"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "op_surreal_ast"

# `op-codegen-ndjson` — CLI that reads an SPO-triple ndjson stream
# (produced by `ruff_ruby_spo`) and writes the rendered SurrealQL
# schema. Closes the end-to-end pipeline:
#
#     ruff_ruby_spo (Ruby AST → triples.ndjson)
#         │
#         ▼
#     op-codegen-ndjson (this binary) → schema.surql
#
# Tiny: pulls only serde + serde_json (already dev-deps).
[[bin]]
name = "op-codegen-ndjson"
path = "src/bin/op_codegen_ndjson.rs"
required-features = ["cli"]

[features]
default = []
# Activates the CLI binary + pulls in serde/serde_json for ndjson
# parsing. Off by default so library consumers don't pay the
# dependency cost.
cli = ["dep:serde", "dep:serde_json"]

[dependencies]
lance-graph-contract = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }
# Canonical vocabulary — the source of the typed `Class` shape that
# `from_class::class_to_table` consumes. Northstar plan §3 C3: the third
# path that feeds the same byte-identical typed AST as `from_triples`,
# but reading the calcified canonical layer directly instead of a
# triple stream. ogar-vocab is a tiny zero-runtime-dep crate.
ogar-vocab = { path = "../../vendor/AdaWorldAPI-OGAR/crates/ogar-vocab" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
# For the `op_schema_explore` ignored test that reads a real ndjson
# triple dump produced by `ruff_ruby_spo`. Diagnostic only — not in
# the production lib build.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
