[package]
name = "op-work-packages"
version.workspace = true
edition.workspace = true
description = "Work package model + services for OpenProject RS"

[dependencies]
op-core = { path = "../op-core" }
# W6: additive link into the OGAR transpile landing zone -- surfaces the
# canonical `project_work_item` struct alongside the working `WorkPackage`
# model (see `CanonicalWorkPackage` in src/work_package.rs). Brings in only
# `op-generated`'s own `serde_json` dep transitively; no OGAR/askama/ruff.
op-generated = { path = "../op-generated" }

serde.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
